syntax = "proto3";

package xbasissvc.external.user;

import "konekko.me/xbasis/commons/dto/commons.proto";

service Register {

    rpc New (NewRequest) returns (xbasis.commons.dto.Status);

}

message NewRequest {
    string username = 1;
    string contract = 2;
    string clientId = 3;
    string password = 4;
}